--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="content">
       <h2 class="fade-in">Pesan dari Temanmu! 📝</h2>
       <p class="typing-text">
-        Indri, pesan dari aku mah itu jangan terlalu nolep xixixi sama lebih berhati hati lagi dalam memposting sesuatu, coba bayangin kalau aku ga bisa napas karena u took my breath away? it should be illegal to be this beautfiul. Btw maaf ya di halaman pertama aku pake foto Choi Jeongmin karna ga ada foto kam kocag (pls sering sering kasih aku pap). Btw aku pake foto Choi Jeongmin karna mirip kam bejir.
+        Indri, pesan dari aku mah itu jangan terlalu nolep xixixi sama lebih berhati hati lagi dalam memposting sesuatu, coba bayangin kalau aku ga bisa napas karena u took my breath away? it should be illegal to be this beautiful. Btw maaf ya di halaman pertama aku pake foto Choi Jeongmin karna ga ada foto kam kocag (pls sering sering kasih aku pap). Btw aku pake foto Choi Jeongmin karna mirip kam bejir.
       </p>
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRN-KqhBB0dfLGiBt8QgTHkv251HPLVuxqs5g&s" 
            alt="Pesan Teman" class="profile-pic rotate">
